idea/testData/checker/sealed/SealedOutsidePackageInheritors.kt
package sealed.otherpackage

class D: <error descr="[UNRESOLVED_REFERENCE] Unresolved reference: SealedDeclarationInterface">SealedDeclarationInterface</error>
class DClass: <error descr="[UNRESOLVED_REFERENCE] Unresolved reference: SealedDeclarationClass">SealedDeclarationClass</error>()